versions/v2.9/modules/en/pages/rancher-admin/global-configuration/rke1-templates/example-use-cases.adoc
= Example Scenarios
:page-languages: [en, zh]
:revdate: 2025-03-17
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-rke1-templates/example-use-cases.adoc 
:product-path: rancher-admin/global-configuration/rke1-templates/example-use-cases.adoc
ifeval::["{build-type}" != "community"]
:xref-global-permissions: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc
:xref-access-share-rke1-templates: xref:rancher-admin/global-configuration/rke1-templates/access-or-share-templates.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-global-permissions: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/global-permissions.adoc 
:xref-access-share-rke1-templates: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-rke1-templates/access-or-share-templates.adoc
endif::[]

These example scenarios describe how an organization could use templates to standardize cluster creation.

* *Enforcing templates:* Administrators might want to <<_enforcing_a_template_setting_for_everyone,enforce one or more template settings for everyone>> if they want all new Rancher-provisioned clusters to have those settings.
* *Sharing different templates with different users:* Administrators might give <<_templates_for_basic_and_advanced_users,different templates to basic and advanced users,>> so that basic users have more restricted options and advanced users have more discretion when creating clusters.
* *Updating template settings:* If an organization's security and DevOps teams decide to embed best practices into the required settings for new clusters, those best practices could change over time. If the best practices change, <<_updating_templates_and_clusters_created_with_them,a template can be updated to a new revision>> and clusters created from the template can upgrade to the new version of the template.
* *Sharing ownership of a template:* When a template owner no longer wants to maintain a template, or wants to delegate ownership of the template, this scenario describes how <<_allowing_other_users_to_control_and_share_a_template,template ownership can be shared.>>

== Enforcing a Template Setting for Everyone

Let's say there is an organization in which the administrators decide that all new clusters should be created with Kubernetes version 1.14.

. First, an administrator creates a template which specifies the Kubernetes version as 1.14 and marks all other settings as *Allow User Override*.
. The administrator makes the template public.
. The administrator turns on template enforcement.

*Results:*

* All Rancher users in the organization have access to the template.
* All new clusters created by {xref-global-permissions}[standard users] with this template will use Kubernetes 1.14 and they are unable to use a different Kubernetes version. By default, standard users don't have permission to create templates, so this template will be the only template they can use unless more templates are shared with them.
* All standard users must use a cluster template to create a new cluster. They cannot create a cluster without using a template.

In this way, the administrators enforce the Kubernetes version across the organization, while still allowing end users to configure everything else.

== Templates for Basic and Advanced Users

Let's say an organization has both basic and advanced users. Administrators want the basic users to be required to use a template, while the advanced users and administrators create their clusters however they want.

. First, an administrator turns on xref:./enforce-templates.adoc#_requiring_new_clusters_to_use_an_rke_template[RKE template enforcement.] This means that every {xref-global-permissions}[standard user] in Rancher will need to use an RKE template when they create a cluster.
. The administrator then creates two templates:

* One template for basic users, with almost every option specified except for access keys
* One template for advanced users, which has most or all options has *Allow User Override* turned on

. The administrator shares the advanced template with only the advanced users.
. The administrator makes the template for basic users public, so the more restrictive template is an option for everyone who creates a Rancher-provisioned cluster.

*Result:* All Rancher users, except for administrators, are required to use a template when creating a cluster. Everyone has access to the restrictive template, but only advanced users have permission to use the more permissive template. The basic users are more restricted, while advanced users have more freedom when configuring their Kubernetes clusters.

== Updating Templates and Clusters Created with Them

Let's say an organization has a template that requires clusters to use Kubernetes v1.14. However, as time goes on, the administrators change their minds. They decide they want users to be able to upgrade their clusters to use newer versions of Kubernetes.

In this organization, many clusters were created with a template that requires Kubernetes v1.14. Because the template does not allow that setting to be overridden, the users who created the cluster cannot directly edit that setting.

The template owner has several options for allowing the cluster creators to upgrade Kubernetes on their clusters:

* *Specify Kubernetes v1.15 on the template:* The template owner can create a new template revision that specifies Kubernetes v1.15. Then the owner of each cluster that uses that template can upgrade their cluster to a new revision of the template. This template upgrade allows the cluster creator to upgrade Kubernetes to v1.15 on their cluster.
* *Allow any Kubernetes version on the template:* When creating a template revision, the template owner can also mark the the Kubernetes version as *Allow User Override* using the switch near that setting on the Rancher UI. This will allow clusters that upgrade to this template revision to use any version of Kubernetes.
* *Allow the latest minor Kubernetes version on the template:* The template owner can also create a template revision in which the Kubernetes version is defined as *Latest v1.14 (Allows patch version upgrades)*. This means clusters that use that revision will be able to get patch version upgrades, but major version upgrades will not be allowed.

== Allowing Other Users to Control and Share a Template

Let's say Alice is a Rancher administrator. She owns an RKE template that reflects her organization's agreed-upon best practices for creating a cluster.

Bob is an advanced user who can make informed decisions about cluster configuration. Alice trusts Bob to create new revisions of her template as the best practices get updated over time. Therefore, she decides to make Bob an owner of the template.

To share ownership of the template with Bob, Alice xref:./access-or-share-templates.adoc#_sharing_ownership_of_templates[adds Bob as an owner of her template.]

The result is that as a template owner, Bob is in charge of version control for that template. Bob can now do all of the following:

* xref:./manage-templates.adoc#_updating_a_template[Revise the template] when the best practices change
* xref:./manage-templates.adoc#_disabling_a_template_revision[Disable outdated revisions] of the template so that no new clusters can be created with it
* xref:./manage-templates.adoc#_deleting_a_template[Delete the whole template] if the organization wants to go in a different direction
* xref:./manage-templates.adoc#_setting_a_template_revision_as_default[Set a certain revision as default] when users create a cluster with it. End users of the template will still be able to choose which revision they want to create the cluster with.
* {xref-access-share-rke1-templates}[Share the template] with specific users, make the template available to all Rancher users, or share ownership of the template with another user.
